test/spec_vectors/load/fail/module_21.wat
(module (memory 1) (func $load8_u_i64 (i64.load8_u (i32.const 0))))